Minor bugfix to add a missing call to the parnet funciton

A call to the parent OnBoundsChanged function is missing which results
in the image origin not being updated.

Bug: 894242
Change-Id: I7f7f911f066a0470b58232af3b37ea088712a5cf
Component: App list icon
Reviewed-on: https://chromium-review.googlesource.com/c/1275141
Reviewed-by: Weidong Guo <weidongg@chromium.org>
Commit-Queue: Malay Keshav <malaykeshav@chromium.org>
Cr-Commit-Position: refs/heads/master@{#598613}